# cosyn-governance-exe-legal

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-COMMERCIAL  README.md
docs/: CHANGELOG.md
docs/build-reports/: cosyn-v4.1.0-build-report.md  cosyn-v4.1.1-build-log.md
docs/build-reports/v4x-archive/: cosyn-v4.1.0-build-log.md  cosyn-v4.1.0-technical-report.md
docs/specs/: 2026-03-28-live-testing-methodology-design.md  v5-legal-draft-20260328.md
governance/legal/: FORK_POLICY.md  NOTICE.md
src/: authority_loader.rs  cli.rs  lib.rs  main.rs
src/audit/: mod.rs
src/core/: types.rs
src/dcc/: ambiguity.rs  block.rs  evidence.rs  grounding.rs  mod.rs  release.rs  subject.rs  telemetry.rs  types.rs  version.rs
src/governance_layer/: mod.rs
src/input_gate/: integrity.rs  mod.rs
src/llm_client/: mod.rs
src/orchestrator/: bootstrap.rs  mod.rs
src/telemetry/: mod.rs
src/ui_runtime/: mod.rs
src/validator/: mod.rs
tests/: audit_record.rs  dcc_enforcement.rs  telemetry_events.rs
tests/live/: run-live-tests.sh
tests/live/v4x-archive/: cosyn-live-test-manifest-v4.1.1.csv  cosyn-live-test-manifest.csv  cosyn-live-test-report-2026-03-28.md
