[package]
name = "cosyn-legal"
version = "5.0.0-dev"
edition = "2021"
authors = ["Shane Gaither"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] } # HTTP client for local Ollama inference API
eframe = "0.31"

[lib]
name = "cosyn"
path = "src/lib.rs"

[[bin]]
name = "cosyn-cli"
path = "src/cli.rs"

[profile.release]
opt-level = 3

